--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,31 @@ body{
 	.lh-40{
 		line-height:40px;
 	}
+	@media screen and (max-width: 700px) {
+		.container{
+			display: flex;
+			flex-direction: column;
+		}
+		.info{
+			width: 100%;
+		}
+		.detail{
+			width: 100%;
+		}
+	}
+	@media screen and (max-width: 1000px) {
+		.container{
+			width: 100%;
+		}
+		.info{
+			width: 100%;
+		}
+		.detail{
+			width: 100%;
+		} 
+	}
+	@media screen and (max-width:400px){
+		.max-pad{
+			padding: 10px 40px;
+		}
+	}
