--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
 body{
 	font-family: Arial, Helvetica, sans-serif;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 .container{
 	display: flex;
 	width: 80%;
+	/* width: 83.333%;
+	max-width: 1000px; */
+	/* margin-right: auto;
+	margin-left: auto; */
 	margin: 0 auto;
 	color: antiquewhite;
 }
