--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,11 @@ body{
 .container{
 	display: flex;
 	width: 80%;
-	/* width: 83.333%;
-	max-width: 1000px; */
-	/* margin-right: auto;
-	margin-left: auto; */
-	margin: 0 auto;
+
+	max-width: 1000px; 
+	margin-right: auto;
+	margin-left: auto;
+	/* margin: 0 auto; */
 	color: antiquewhite;
 }
 .info{
