--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,56 @@
 body{
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Roboto', sans-serif;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	padding: 0;
+	background-color: rgb(243, 240, 240);
+	margin:0;
 }
 .container{
 	display: flex;
+	flex-direction: column;
 	width: 80%;
-
 	max-width: 1000px; 
 	margin-right: auto;
 	margin-left: auto;
-	/* margin: 0 auto; */
 	color: antiquewhite;
+	margin-top: 50px;
+}
+.header-container{
+	width: 80%;
+	max-width: 1000px;
+	min-height: 40px;
+	margin: 0 auto;
+}
+header{
+	width: 100%;
+	background-color: pink;
+	position:fixed;
+	top:0
+}
+
+header ul{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	align-items: center;
+	list-style: none;
+}
+header ul li{
+	margin-right: 20px;
+}
+header ul:last-child{
+	margin-right: -20px;
+}
+a{
+	text-decoration: none;
 }
 .info{
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: flex-start;
-	width:30%;
 	height:auto;
 	background-color: rgb(134, 134, 241);
 
@@ -114,31 +145,21 @@ body{
 	.lh-40{
 		line-height:40px;
 	}
-	@media screen and (max-width: 700px) {
-		.container{
-			display: flex;
-			flex-direction: column;
-		}
-		.info{
-			width: 100%;
-		}
-		.detail{
-			width: 100%;
-		}
-	}
-	@media screen and (max-width: 1000px) {
-		.container{
-			width: 100%;
-		}
+	/* @media screen and (max-width: 1000px) {
+
 		.info{
 			width: 100%;
 		}
 		.detail{
 			width: 100%;
 		} 
-	}
-	@media screen and (max-width:400px){
+	}*/
+
+	@media screen and (max-width:600px){
 		.max-pad{
 			padding: 10px 40px;
+		}
+		header{
+			display: none;
 		}
 	}
