--- a/css/style.css
+++ b/css/style.css
@@ -131,9 +131,8 @@ main{
 }
 
 .info_item img{
-	width: 40px;
-	margin-right: 10px;
-	color: aqua;
+	width: 30px;
+	margin-right: 20px;
 }
 
 .detail{
@@ -150,14 +149,18 @@ main{
 pre{
 	font-size: 14px;
 	border: 2px solid grey;
-
+	word-wrap: break-word;
+	padding:0;
 	border-left: 12px solid green;
 	border-radius: 5px;
 	background-color: black;
 	padding: 0;
 	margin-top: 20px;
 	color: #fff;
+	overflow: hidden;
+	overflow-x: auto;
 }
+.preElement { white-space:pre;}
 
 footer{
 	width: 100%;
