refactor: update links

--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,15 @@ body{
 	font-family: 'Roboto', sans-serif;
 	display: flex;
 	flex-direction: column;
-	/* justify-content: center;
-	align-items: center; */
+	justify-content: center;
+
 	padding: 0;
 	background-color: rgb(243, 240, 240);
 	margin:0;
 }
+html {
+	scroll-behavior: smooth; 
+  }
 .container{
 	display: flex;
 	flex-direction: column;
@@ -26,7 +29,7 @@ body{
 }
 header{
 	width: 100%;
-	background-color: pink;
+	background-color: rgb(236, 96, 119);
 	position:fixed;
 	top:0
 }
@@ -37,6 +40,7 @@ header ul{
 	justify-content: flex-end;
 	align-items: center;
 	list-style: none;
+	
 }
 header ul li{
 	margin-right: 20px;
@@ -44,9 +48,15 @@ header ul li{
 header ul:last-child{
 	margin-right: -20px;
 }
-a{
+header ul li a{
 	text-decoration: none;
+	color: #fff;
+	text-decoration: none;
+	transition: color 0.5s;
 }
+header ul li a:hover {
+	color: #0fb929;
+  }
 main{
 	width : 100%;
 }
@@ -86,8 +96,6 @@ main{
 .list{
 	list-style: none;
 	padding: 0;
-
-
 }
 .list-item{
 	display: flex;
@@ -181,7 +189,6 @@ footer{
 	align-items: center;
 }
 footer img{
-
 	width: 100px;
 }
 
@@ -196,9 +203,10 @@ footer img{
 	text-align: center;
 }
 .hr{
-	background-color: white;
+	background-color: rgb(238, 225, 225);
 	width: 100%;
-	height:2px;
+	height:5px;
+	margin:40px 0;
 }
 .mr-20{
 	margin-right: 20px;
