--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 	max-width: 1000px; 
 	margin-right: auto;
 	margin-left: auto;
-	color: antiquewhite;
+	color: white;
 	margin-top: 50px;
 }
 .header-container{
@@ -71,8 +71,7 @@ main{
 	align-items: flex-start;
 	height:auto;
 	background-color: rgb(134, 134, 241);
-
-	/* color: white */
+	
 }
 .logo{
 	display: flex;
@@ -168,7 +167,6 @@ pre{
 	overflow: hidden;
 	overflow-x: auto;
 }
-.preElement { white-space:pre;}
 
 footer{
 	width: 100%;
@@ -213,6 +211,9 @@ footer img{
 }
 .mb-20{
 	margin-bottom: 20px;
+}
+.mt-40{
+	margin-top: 40px;
 }
 .lh-20{
 	line-height:20px;
