fix: fixed bugs

--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ pre{
 footer{
 	width: 100%;
 	background-color:rgb(94, 53, 53);
-	padding:20px auto;
+	padding:20px;
 	color:white;
 	height: 100%;
 
